Add ci and fix some reuse issues
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "org.kde.klevernotes",
     "runtime": "org.kde.Platform",
-    "runtime-version": "5.15",
+    "runtime-version": "5.15-22.08",
     "sdk": "org.kde.Sdk",
     "command": "klevernotes",
     "tags": ["nightly"],
