--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -3,6 +3,8 @@
     "runtime": "org.kde.Platform",
     "runtime-version": "5.15-22.08",
     "sdk": "org.kde.Sdk",
+    "base": "io.qt.qtwebengine.BaseApp",
+    "base-version": "5.15-22.08",
     "command": "klevernotes",
     "tags": ["nightly"],
     "desktop-file-name-suffix": " (Nightly)",
