Replace old treeview by a new one (Kirigami-Addons TreeListView + tree model)
This remove the old treeview code and replace it with a TreeListView + a custom tree model (QStanderItemModel).

The old functionnality are all reimplemented (context menu, note creation etc etc).

This also improve the backend for note naming/creation by adding more checks and improving the error feedback.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,7 +30,6 @@ set(exec_SRCS
 
     logic/documentHandler.cpp
     logic/kleverUtility.cpp
-    logic/storageHandler.cpp
     logic/todoHandler.cpp
 
     logic/mdHandler.cpp
@@ -43,6 +42,8 @@ set(exec_SRCS
     logic/painting/strokeitem.cpp
     logic/painting/strokelistitem.cpp
     logic/painting/strokepainter.cpp
+
+    logic/treeview/noteTreeModel.cpp
 
     resources.qrc)
 
