--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
-- 'on': ['@all']
+- 'on': [ 'Linux/Qt5', 'FreeBSD/Qt5', 'Windows/Qt5' ]
   'require':
     'frameworks/extra-cmake-modules': '@stable'
     'frameworks/ki18n': '@stable'
@@ -11,10 +11,19 @@ Dependencies:
     'frameworks/kcoreaddons': '@stable'
     'frameworks/kconfig': '@stable'
     'libraries/kirigami-addons': '@latest'
-
-- 'on': ['Linux', 'FreeBSD', 'Windows']
-  'require':
     'frameworks/qqc2-desktop-style': '@stable'
+
+- 'on': [ 'Linux/Qt6', 'FreeBSD/Qt6', 'Windows/Qt6']
+  'require':
+    'frameworks/extra-cmake-modules': '@latest-kf6'
+    'frameworks/ki18n': '@latest-kf6'
+    'frameworks/kio': '@latest-kf6'
+    'frameworks/kirigami': '@latest-kf6'
+    'frameworks/kcoreaddons': '@latest-kf6'
+    'frameworks/kconfig': '@latest-kf6'
+    'frameworks/kcolorscheme': '@latest-kf6'
+    'libraries/kirigami-addons': '@latest-kf6'
+    'frameworks/qqc2-desktop-style': '@latest-kf6'
 
 Options:
   require-passing-tests-on: [ '@all' ]
