--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,21 +9,49 @@ set(lib_SRCS
 
 add_library(klevernoteslib STATIC ${lib_SRCS})
 target_link_libraries(klevernoteslib
-    Qt5::Core
-    Qt5::Gui
-    Qt5::Qml
-    Qt5::Quick
-    Qt5::QuickControls2
-    Qt5::Svg
-    KF5::I18n
-    KF5::CoreAddons
-    KF5::ConfigCore
-    KF5::ConfigGui
-    KF5::KIOCore
-    KF5::ConfigWidgets
+    Qt::Core
+    Qt::Gui
+    Qt::Qml
+    Qt::Quick
+    Qt::QuickControls2
+    Qt::Svg
     Qt::WebChannel
-    Qt::WebEngine
-    Qt::WebEngineWidgets)
+    Qt::WebEngineWidgets
+    KF${QT_MAJOR_VERSION}::I18n
+    KF${QT_MAJOR_VERSION}::CoreAddons
+    KF${QT_MAJOR_VERSION}::ConfigCore
+    KF${QT_MAJOR_VERSION}::ConfigGui
+    KF${QT_MAJOR_VERSION}::ConfigWidgets
+)
+
+if(QT_MAJOR_VERSION STREQUAL "5")
+       set(QTQUICKDIALOG_VERSION "1.3")
+       set(FILTER_NAMING "filterRole")
+       set(KIRIGAMI_LISTITEM_ICON "icon")
+       set(KIRIGAMI_ACTION_ICON "iconName")
+       set(KIRIGAMI_PAGE_ACTION "actions.contextualActions")
+
+       target_link_libraries(klevernoteslib Qt::WebEngine KF5::KIOCore)
+else()
+       set(QTQUICKDIALOG_VERSION "")
+       set(FILTER_NAMING "filterRoleName")
+       set(KIRIGAMI_LISTITEM_ICON "icon.name")
+       set(KIRIGAMI_ACTION_ICON "icon.name")
+       set(KIRIGAMI_PAGE_ACTION "actions")
+
+       target_link_libraries(klevernoteslib Qt6::WebEngineQuick KF6::KIOCore KF6::KIOFileWidgets KF6::KIOWidgets)
+endif()
+
+configure_file(contents/ui/sideBar/ActionBar.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/sideBar/ActionBar.qml)
+configure_file(contents/ui/sideBar/SearchBar.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/sideBar/SearchBar.qml)
+configure_file(contents/ui/sideBar/Sidebar.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/sideBar/Sidebar.qml)
+configure_file(contents/ui/textEditor/TextToolBar.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/textEditor/TextToolBar.qml)
+configure_file(contents/ui/textEditor/BottomToolBar.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/textEditor/BottomToolBar.qml)
+configure_file(contents/ui/dialogs/FilePickerDialog.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/dialogs/FilePickerDialog.qml)
+configure_file(contents/ui/pages/MainPage.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/pages/MainPage.qml)
+configure_file(contents/ui/pages/PaintingPage.qml ${CMAKE_CURRENT_BINARY_DIR}/contents/ui/pages/PaintingPage.qml)
+
+configure_file(resources.qrc ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc)
 
 set(exec_SRCS
     main.cpp
@@ -46,12 +74,13 @@ set(exec_SRCS
 
     logic/treeview/noteTreeModel.cpp
 
-    resources.qrc)
+    ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc
+)
 
 add_executable(klevernotes ${exec_SRCS})
 target_link_libraries(klevernotes klevernoteslib)
+find_package(KF${QT_MAJOR_VERSION}KIO)
 
-find_package(KF5KIO)
 
 if (ANDROID)
     kirigami_package_breeze_icons(ICONS
@@ -64,3 +93,4 @@ endif()
 
 kconfig_add_kcfg_files(klevernotes GENERATE_MOC kleverconfig.kcfgc)
 install(TARGETS klevernotes ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
+
