--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,7 @@
 include:
         - project: sysadmin/ci-utilities
           file: 
-                - /gitlab-templates/linux.yml
-                - /gitlab-templates/freebsd.yml
                 - /gitlab-templates/flatpak.yml
-            #  - /gitlab-templates/reuse-lint.yml not good enough yet
+                # - /gitlab-templates/reuse-lint.yml
                 - /gitlab-templates/freebsd-qt6.yml
                 - /gitlab-templates/linux-qt6.yml
