Fixing broken printing page
- The WebEngineView wouldn't render the pdf, it has been replace with a
PdfMultiPageView.
- new printtingHelper class, create empty pdf and copy file (might move
  to kleverUtility)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,6 +81,8 @@ set(exec_SRCS
     logic/parser/parser.cpp
     logic/parser/renderer.cpp
 
+    logic/printing/printtingHelper.cpp
+
     logic/syntaxHighlight/highlightHelper.cpp
 
     logic/treeview/noteTreeModel.cpp
