--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -1,10 +1,10 @@
 {
     "id": "org.kde.klevernotes",
     "runtime": "org.kde.Platform",
-    "runtime-version": "5.15-22.08",
+    "runtime-version": "6.6",
     "sdk": "org.kde.Sdk",
     "base": "io.qt.qtwebengine.BaseApp",
-    "base-version": "5.15-22.08",
+    "base-version": "6.6",
     "command": "klevernotes",
     "tags": ["nightly"],
     "desktop-file-name-suffix": " (Nightly)",
