--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@
 include:
         - project: sysadmin/ci-utilities
           file: 
-                - /gitlab-templates/flatpak.yml
+                # - /gitlab-templates/flatpak.yml broken with QT6
                 # - /gitlab-templates/reuse-lint.yml
                 - /gitlab-templates/freebsd-qt6.yml
                 - /gitlab-templates/linux-qt6.yml
