CMake and QML QT6 only
This remove the rest of compatibility code for QT5/6 inside the CMakeList and the different QML files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,10 @@ project(klevernotes VERSION 0.1)
 
 include(FeatureSummary)
 
-set(QT5_MIN_VERSION 5.15)
-set(KF5_MIN_VERSION 5.84)
+set(QT_MIN_VERSION "6.5")
+set(KF_MIN_VERSION "5.240.0")
 
-find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
+find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH})
 
@@ -30,27 +30,23 @@ ecm_setup_version(${PROJECT_VERSION}
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/src/version-klevernotes.h"
 )
 
-find_package(Qt${QT_MAJOR_VERSION} ${QT_MIN_VERSION} REQUIRED COMPONENTS
+find_package(Qt6 ${QT_MIN_VERSION} REQUIRED COMPONENTS
     Core
     Gui
     Qml
     QuickControls2
     Svg
     WebEngineWidgets
+    WebEngineQuick
 )
 
-if (QT_MAJOR_VERSION STREQUAL "5")
-    find_package(Qt5 REQUIRED COMPONENTS WebEngine)
-else()
-    find_package(Qt6 REQUIRED COMPONENTS WebEngineQuick)
-endif()
-
-find_package(KF${QT_MAJOR_VERSION} ${QT_MIN_VERSION} REQUIRED COMPONENTS
+find_package(KF6 ${KF_MIN_VERSION} REQUIRED COMPONENTS
     Kirigami2
     CoreAddons
     Config
     I18n
     ConfigWidgets
+    KIO
 )
 
 if (ANDROID)
