Moving noteMapper parser logic to NoteMapperParserUtils
This is the first step to transform pluginHelper into a 'bridge' between
the different plugins and the Parser, each plugin will have its own
class to handle Parser logic.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,6 +63,7 @@ set(exec_SRCS
     logic/plugins/emoji/emojiTones.cpp
 
     logic/plugins/noteMapper/noteMapper.cpp
+    logic/plugins/noteMapper/noteMapperParserUtils.cpp
     logic/plugins/noteMapper/noteMapperUtils.cpp
 
     logic/plugins/puml/pumlHelper.cpp
