Moving code highlight parser logic to HighlightParserUtils

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,7 @@ set(exec_SRCS
     logic/plugins/puml/pumlHelper.cpp
 
     logic/plugins/syntaxHighlight/highlightHelper.cpp
+    logic/plugins/syntaxHighlight/highlightParserUtils.cpp
 )
 
 add_executable(klevernotes ${exec_SRCS})
