Add ImprovedTextArea.qml and VimHandler
- The TextEditor textArea has moved to its own file 'ImprovedTextAre'
- vimHandler.h/cpp is added, this object will handle key event and
  response accordingly when Vim mode is On.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,8 @@ set(exec_SRCS
     logic/mdHandler.cpp
     logic/qmlLinker.cpp
 
+    logic/editorHandler/vimHandler.cpp
+
     logic/painting/pointMaker.cpp
     logic/painting/sketchserializer.cpp
     logic/painting/sketchview.cpp
