Fix naming error in .desktop and .metainfo.xml file
- The icon was not properly set in the .desktop file
- The metainfo file was still using the old app name

--- a/org.kde.klevernotes.desktop
+++ b/org.kde.klevernotes.desktop
@@ -53,7 +53,7 @@ Comment[x-test]=xxKleverNotes Kirigami Applicationxx
 Comment[zh_TW]=KleverNotes Kirigami 應用程式
 Version=1.0
 Exec=klevernotes
-Icon=org.kde.klevernotes.svg
+Icon=org.kde.klevernotes
 Type=Application
 Terminal=false
 Categories=Qt;KDE;Utility
