Solve qml WebEngineView import error
Solve the following error:
module "QtWebEngine" plugin "qtwebenginequickplugin" not found

--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -15,7 +15,8 @@
         "--socket=x11",
         "--socket=wayland",
         "--device=dri",
-        "--filesystem=home"
+        "--filesystem=home",
+        "--env=QML_IMPORT_PATH=/app/qml"
     ],
     "separate-locales": false,
 
