--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -17,9 +17,11 @@
         "--device=dri",
         "--filesystem=home",
         "--env=QML_IMPORT_PATH=/app/qml",
+        "--env=QTWEBENGINE_DICTIONARIES_PATH=/app/qtwebengine_dictionaries",
         "--talk-name=org.freedesktop.Flatpak"
     ],
     "separate-locales": false,
+    "cleanup-commands": ["/app/cleanup-BaseApp.sh"],
 
     "modules": [
         {
@@ -44,4 +46,3 @@
         }
     ]
 }
-
