--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ include:
         - project: sysadmin/ci-utilities
           file: 
                 - /gitlab-templates/flatpak.yml
-                # - /gitlab-templates/reuse-lint.yml
+                - /gitlab-templates/reuse-lint.yml
                 - /gitlab-templates/freebsd-qt6.yml
                 - /gitlab-templates/linux-qt6.yml
