Adding QMarkDownTextEdit MarkdownHighlighter as base
This adds the MarkdownHighlighter from https://github.com/pbek/qmarkdowntextedit
to the textEditor as a base to explore what this technic offers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,9 @@ set(exec_SRCS
     logic/printing/printingHelper.cpp
 
     logic/treeview/noteTreeModel.cpp
+
+    logic/wysiwyg/markdownHighlighter.cpp
+    logic/wysiwyg/qownlanguagedata.cpp
     
     # PLUGINS
     logic/plugins/cliHelper.cpp
