--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ set(exec_SRCS
     logic/kleverUtility.cpp
     logic/mdHandler.cpp
     logic/qmlLinker.cpp
+    logic/editorHandler.cpp
 
     logic/painting/pointMaker.cpp
     logic/painting/sketchserializer.cpp
