Use md4qt to parse/render
Only standard Markdown, plugins and extended syntax will come later

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,9 @@ add_library(klevernoteslib STATIC
     logic/mdHandler.cpp
     logic/qmlLinker.cpp
 
+    # Editor
+    logic/editor/editorHandler.cpp
+
     # Painting
     logic/painting/pointMaker.cpp
     logic/painting/sketchserializer.cpp
@@ -29,14 +32,12 @@ add_library(klevernoteslib STATIC
     logic/treeview/noteTreeModel.cpp
 
     # === PARSER ===
-    logic/parser/blockLexer.cpp
-    logic/parser/inlineLexer.cpp
     logic/parser/parser.cpp
     logic/parser/renderer.cpp
 
     # plugins
-    logic/parser/plugins/cliHelper.cpp
-    logic/parser/plugins/pluginHelper.cpp
+    # logic/parser/plugins/cliHelper.cpp
+    # logic/parser/plugins/pluginHelper.cpp
 
     logic/parser/plugins/emoji/emoticonFilterModel.cpp
     logic/parser/plugins/emoji/emojiModel.cpp
@@ -45,12 +46,12 @@ add_library(klevernoteslib STATIC
     logic/parser/plugins/noteMapper/noteMapper.cpp
     logic/parser/plugins/noteMapper/noteMapperParserUtils.cpp
     logic/parser/plugins/noteMapper/noteMapperUtils.cpp
-
-    logic/parser/plugins/puml/pumlHelper.cpp
-    logic/parser/plugins/puml/pumlParserUtils.cpp
-
-    logic/parser/plugins/syntaxHighlight/highlightHelper.cpp
-    logic/parser/plugins/syntaxHighlight/highlightParserUtils.cpp
+    #
+    # logic/parser/plugins/puml/pumlHelper.cpp
+    # logic/parser/plugins/puml/pumlParserUtils.cpp
+    #
+    # logic/parser/plugins/syntaxHighlight/highlightHelper.cpp
+    # logic/parser/plugins/syntaxHighlight/highlightParserUtils.cpp
 )
 
 kconfig_add_kcfg_files(klevernoteslib GENERATE_MOC kleverconfig.kcfgc)
