Add emoji plugin

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(klevernoteslib STATIC
     logic/parser/plugins/emoji/emoticonFilterModel.cpp
     logic/parser/plugins/emoji/emojiModel.cpp
     logic/parser/plugins/emoji/emojiTones.cpp
+    logic/parser/plugins/emoji/emojiPlugin.cpp
 
     logic/parser/plugins/noteMapper/noteMapper.cpp
     logic/parser/plugins/noteMapper/noteMapperParserUtils.cpp
