Handle show delims for selected text
Delims surrounding the selectionStart and selectEnd as well as delims
between those 2 position, are now correctly handled

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(klevernoteslib STATIC
     logic/editor/editorHandler.cpp
     logic/editor/editorHighlighter.cpp
     logic/editor/editorHighlighterPrivate.cpp
+    logic/editor/posCacheUtils.cpp
 
     # Painting
     logic/painting/pointMaker.cpp
