--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(klevernoteslib STATIC
     logic/editor/editorHighlighter.cpp
     logic/editor/editorHighlighterPrivate.cpp
     logic/editor/posCacheUtils.cpp
+    logic/editor/toolbarUtils.cpp
 
     # Painting
     logic/painting/pointMaker.cpp
