--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -1,27 +1,26 @@
 {
     "id": "org.kde.klevernotes",
     "runtime": "org.kde.Platform",
-    "runtime-version": "6.6",
+    "runtime-version": "6.7",
     "sdk": "org.kde.Sdk",
     "base": "io.qt.qtwebengine.BaseApp",
-    "base-version": "6.6",
+    "base-version": "6.7",
     "command": "klevernotes",
     "tags": ["nightly"],
     "desktop-file-name-suffix": " (Nightly)",
-
     "finish-args": [
-        "--share=ipc",
-        "--share=network",
-        "--socket=x11",
-        "--socket=wayland",
         "--device=dri",
-        "--filesystem=home",
         "--env=QML_IMPORT_PATH=/app/qml",
-        "--env=QTWEBENGINE_DICTIONARIES_PATH=/app/qtwebengine_dictionaries",
-        "--talk-name=org.freedesktop.Flatpak"
+        "--share=ipc",
+        "--socket=wayland",
+        "--socket=fallback-x11"
+    ],
+    "cleanup-commands": "/app/cleanup-BaseApp.sh",
+    "cleanup": [
+        "/include"
     ],
     "separate-locales": false,
-    "cleanup-commands": ["/app/cleanup-BaseApp.sh"],
+
 
     "modules": [
         {
